<resources>
    <string name="app_name">RetroFire</string>
    <string name="play">Play</string>
    <string name="leave">Leave</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="player_name">Enter your name:</string>
    <string name="replay">Replay</string>
    <string name="home">Home</string>
    <string name="input_filter">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="input_player_name">15 characters max</string>
    <string name="high_score">High Score</string>
</resources>
