<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context="com.example.kevin.retrofire.EnterNameActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:text="@string/player_name"
        />


    <EditText
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:digits="@string/input_filter"
        android:gravity="center"
        android:hint="@string/input_player_name"
        android:inputType="textFilter"
        android:maxLength="15"
        android:textColor="#FFFFFF"
        android:textColorHint="#b20000" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:shadowColor="#0F0F0F"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:layout_marginTop="70dp"
        android:textSize="20sp" />
</RelativeLayout>