<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="com.example.kevin.retrofire.EndGameMenuActivity">

    <Button
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="30dp"
        android:shadowColor="#0F0F0F"
        android:text="@string/replay"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button"
        android:shadowColor="#0F0F0F"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:background="@drawable/button"
        android:shadowColor="#0F0F0F"
        android:text="@string/leave"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>